examples/gallery/errors/type_undeclared_type.fsl
// expected-command: check
// expected-result: error
// expected-kind: type
spec GalleryTypeUndeclaredType {
  state { owner: UserId }
  init { owner = 0 }
}
